objects/OppotunityContactRoletemp__c.object
<CustomObject>
    <fields>
        <fullName>PrimaryId__c</fullName>
        <label>PrimaryId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlectedContacts__c</fullName>
        <label>SlectedContacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <externalId>true</externalId>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>OppotunityContactRoletemp</label>
    <nameField>
        <label>OppotunityContactRoletemp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OppotunityContactRoletemps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>